--- a/WebPage/CSS/NEWStyleSheet.css
+++ b/WebPage/CSS/NEWStyleSheet.css
@@ -16,25 +16,27 @@ html, body {
     text-align: center;
 }
 
-#Show_img_Max {
-    position: absolute;
+#Show_img_Max {    
+    position: fixed;
     top: 1px;
+
     display: none;
     width: 100%;
     height: 100%;
     background-color: rgba(0,0,0,0.5);
+    margin: auto;
 }
 
 #Show_img_Max > div {
-        margin: 100px auto;
-        width: 550px;
-        height: 350px;
-    }
+    margin: 100px auto;
+    width: 550px;
+    height: 350px;
+}
 
 #Show_img_Max .Show_imgStyle {
-        width: 550px;
-        height: 350px;
-    }
+    width: 550px;
+    height: 350px;
+}
 
 .Show_Label {
     color: red;
